Configured accesibility to use enter, space and arrows to select operators  On branch main  Changes to be committed: 	modified:   src/App.css 	modified:   src/components/CharacterSelector.tsx

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@ h1 {
     transform: scale(1.15);
 }
 
+.random-attacker-button:focus, .random-defender-button:focus {
+	outline: 2px solid #fff;
+	outline-offset: 4px;
+	transform: scale(1.1);
+}
+
 .character-selector button {
 	height: 100px;
 	width: 100px;
