--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,9 @@ h1 {
 .character-selector input {
 	margin: 10px 0 15px 15px;
 	color-scheme: dark;
-	width: 30px;
+	font-size: x-large;
+	height: 30px;
+	width: 40px;
 }
 
 .random-attacker-button, .random-defender-button {
@@ -82,7 +84,7 @@ h1 {
 	/* character-card container */
 	.character-card-container {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
+		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 		gap: 5px;
 		margin-top: 15px;
 		justify-items: center;
@@ -94,7 +96,6 @@ h1 {
 		margin-inline: 5px;
 		margin-block: 10px;
 		min-width: 250px;
-		max-width: 500px;
 		border: 1px solid #dddddd80;
 		border-radius: 15px;
 		background-color: #d4d4d425;
@@ -117,6 +118,15 @@ h1 {
 }
 /* Styles for 600px and below */
 @media (max-width: 600px) {
+	/* CharacterSelector.tsx */
+	.character-selector input {
+		margin: 10px 0 15px 15px;
+		color-scheme: dark;
+		font-size: x-large;
+		height: 30px;
+		width: 40px;
+	}
+	/* CharacterCard.tsx */
 	.character-card-container {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(140px, 180px));
