--- a/src/App.css
+++ b/src/App.css
@@ -50,36 +50,52 @@ h1 {
 	width: 40px;
 }
 
-.random-attacker-button, .random-defender-button {
-	width: 150px;
-	height: 150px;
-	cursor: pointer;
-	transition: transform 0.2s ease;
-	margin-inline: 15px;
-	margin-bottom: 5px;
-	fill: #24262a;
-	background-color: #4d5c6b;
-	border-radius: 15%;
+@media (max-width: 600px) {
+	.random-attacker-button, .random-defender-button {
+		width: 100px;
+		height: 100px;
+		cursor: pointer;
+		transition: transform 0.2s ease;
+		margin: 10px 30px 25px 30px;
+		fill: #24262a;
+		background-color: #4d5c6b;
+		border-radius: 15%;
+	}
+	
+	.random-attacker-button:hover, .random-defender-button:hover {
+		transform: scale(1.15);
+	}
+	
+	.random-attacker-button:focus, .random-defender-button:focus {
+		outline: 2px solid #fff;
+		outline-offset: 4px;
+		transform: scale(1.1);
+	}
 }
 
-.random-attacker-button:hover, .random-defender-button:hover {
-    transform: scale(1.15);
+@media (min-width: 600px) {
+	.random-attacker-button, .random-defender-button {
+		width: 150px;
+		height: 150px;
+		cursor: pointer;
+		transition: transform 0.2s ease;
+		margin: 10px 30px 25px 30px;
+		padding: 0px 0px 0px 0px;
+		fill: #24262a;
+		background-color: #4d5c6b;
+		border-radius: 15%;
+	}
+	
+	.random-attacker-button:hover, .random-defender-button:hover {
+		transform: scale(1.15);
+	}
+	
+	.random-attacker-button:focus, .random-defender-button:focus {
+		outline: 2px solid #fff;
+		outline-offset: 4px;
+		transform: scale(1.1);
+	}
 }
-
-.random-attacker-button:focus, .random-defender-button:focus {
-	outline: 2px solid #fff;
-	outline-offset: 4px;
-	transform: scale(1.1);
-}
-
-.character-selector button {
-	height: 100px;
-	width: 100px;
-	margin: 10px;
-	margin-bottom: 10px;
-}
-
-
 
 /* CharacterCard.tsx */
 /* Styles for 600px and above */
@@ -87,24 +103,25 @@ h1 {
 	/* character-card container */
 	.character-card-container {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
+		grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
 		gap: 5px;
 		margin-top: 15px;
-		justify-items: center;
+		justify-content: center;
 	}
 
 	.character-card {
 		display: flex;
-		width: 42%;
+		width: 100%;
 		margin-inline: 5px;
 		margin-block: 10px;
-		max-width: 500px;
+		max-width: 350px;
 		min-width: 250px;
 		border: 1px solid #dddddd80;
 		border-radius: 15px;
 		background-color: #d4d4d425;
 		padding: 20px;
 		text-align: center;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.44), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 	}
 
 	.character-card img {
@@ -135,11 +152,11 @@ h1 {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(140px, 180px));
 		gap: 10px;
+		justify-content: center;
 	}
 
 	.character-card {
 		width: 42%;
-		margin: 10px 0 0 5%;
 		min-width: 140px;
 		max-width: 600px;
 		border: 1px solid #dddddd80;
