--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+::-webkit-scrollbar {
+	width: 12.5px;
+	background: #333;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #4d5c6b;
+	border-radius: 100px;
+}
+
 body {
 	font-family: Arial, sans-serif;
 	margin: 2px;
